Закончил базовую стилизацию

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Device</title>
+	<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap&subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="css/normalize.mini.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -10,7 +11,7 @@
 <body>
 	<div class="w-container">
 		<header class="main-header">
-			<a class="header-logo"><img src="img/main-logo-header.svg" alt="Логотип Device"></a>
+			<a class="header-logo"><img src="img/main-logo-header.svg" width="163" height="35" alt="Логотип Device"></a>
 			<nav class="main-navigation">
 				<form class="search-form" method="GET">
 					<label class="search-icon" for="inpt-main-search"><span class="visually-hidden">Поиск</span></label>
@@ -50,7 +51,7 @@
 				<h2 class="visually-hidden">Лучшие товары</h2>
 				<div class="promo-slider-slides promo-slide-1 show-promo-slide">
 					<span class="promo-slider-number">01</span>
-					<img class="promo-slider-img" src="img/promo-slider-monopode.png" alt="Крутой монопод">
+					<img class="promo-slider-img" src="img/promo-slider-monopode.png" width="384" height="486" alt="Крутой монопод">
 					<section class="promo-slider-item-right-side">
 						<h3 class="promo-slider-item-heading">Делай селфи, как Бен Стиллер!</h3>
 						<p class="promo-slider-item-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
@@ -67,7 +68,7 @@
 				</div>
 				<div class="promo-slider-slides promo-slide-2">
 					<span class="promo-slider-number">02</span>
-					<img class="promo-slider-img" src="img/promo-slider-bracelet.png" alt="Крутой фитнес-браслет">
+					<img class="promo-slider-img" src="img/promo-slider-bracelet.png" width="345" height="485" alt="Крутой фитнес-браслет">
 					<section class="promo-slider-item-right-side">
 						<h3 class="promo-slider-item-heading">Худеем правильно!</h3>
 						<p class="promo-slider-item-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
@@ -80,7 +81,7 @@
 				</div>
 				<div class="promo-slider-slides promo-slide-3">
 					<span class="promo-slider-number">03</span>
-					<img class="promo-slider-img" src="img/promo-slider-quadrocopter.png" alt="Крутой квадрокоптер">
+					<img class="promo-slider-img" src="img/promo-slider-quadrocopter.png" width="526" height="334" alt="Крутой квадрокоптер">
 					<section class="promo-slider-item-right-side">
 						<h3 class="promo-slider-item-heading">Порхает как бабочка, жалит как пчела!</h3>
 						<p class="promo-slider-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
@@ -133,16 +134,16 @@
 				<h2 class="visually-hidden">Наши партнеры</h2>
 				<ul class="partners-list">
 					<li class="partners-list-item">
-						<a href="#"><img src="img/logo-dji.png" alt="Логотип компании DJI"></a>
+						<a href="#"><img src="img/logo-dji.png" width="260" height="100" alt="Логотип компании DJI"></a>
 					</li>
 					<li class="partners-list-item">
-						<a href="#"><img src="img/logo-spgadgets.png" alt="Логотип компании SPGadgets"></a>
+						<a href="#"><img src="img/logo-spgadgets.png" width="260" height="100" alt="Логотип компании SPGadgets"></a>
 					</li>
 					<li class="partners-list-item">
-						<a href="#"><img src="img/logo-gopro.png" alt="Логотип компании GoPro"></a>
+						<a href="#"><img src="img/logo-gopro.png" width="260" height="100" alt="Логотип компании GoPro"></a>
 					</li>
 					<li class="partners-list-item">
-						<a href="#"><img src="img/logo-vive.png" alt="Логотип компании HTC Vive"></a>
+						<a href="#"><img src="img/logo-vive.png" width="260" height="100" alt="Логотип компании HTC Vive"></a>
 					</li>
 				</ul>
 			</div>
@@ -161,7 +162,7 @@
 				<section class="contacts">
 					<h2>Контакты</h2>
 					<p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-					<a class="map-btn" href="#"><img src="img/map.png" alt="Адрес магазина Device по адресу г. Москва, ул. Строителей, д. 15"></a>
+					<a class="map-btn" href="#"><img src="img/map.png" width="560" height="222" alt="Адрес магазина Device по адресу г. Москва, ул. Строителей, д. 15"></a>
 					<a class="button" href="#">Напишите нам</a>
 				</section>
 			</div>
@@ -170,7 +171,7 @@
 	<footer class="main-footer">
 		<div class="w-container">
 			<ul class="user-navigation-footer">
-				<li class="user-navigation-footer-item"><a class="footer-logo"><img src="img/main-logo-footer.svg" alt="Логотип Device"></a></li>
+				<li class="user-navigation-footer-item"><a class="footer-logo"><img src="img/main-logo-footer.svg" width="163" height="35" alt="Логотип Device"></a></li>
 				<li class="user-navigation-footer-item"><a href="#">Войти</a></li>
 				<li class="user-navigation-footer-item"><a href="#">Сравнить</a></li>
 				<li class="user-navigation-footer-item"><a href="#">Корзина</a></li>
@@ -214,7 +215,7 @@
 		<button class="close-btn" type="button"><span class="visually-hidden">Закрыть форму</span></button>
 	</section>
 	<div class="popup-map">
-		<img src="img/map-big.png" alt="Адрес магазина Device по адресу г. Москва, ул. Строителей, д. 15">
+		<img src="img/map-big.png" width="960" height="550" alt="Адрес магазина Device по адресу г. Москва, ул. Строителей, д. 15">
 		<button class="close-btn" type="button"><span class="visually-hidden">Закрыть карту</span></button>
 	</div>
 </body>
