--- a/monopode.html
+++ b/monopode.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Device: Моноподы для селфи</title>
+	<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap&subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="css/normalize.mini.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -10,7 +11,7 @@
 <body>
 	<div class="w-container">
 		<header class="main-header">
-			<a class="header-logo" href="index.html"><img src="img/main-logo-header.svg" alt="Логотип Device"></a>
+			<a class="header-logo" href="index.html"><img src="img/main-logo-header.svg" width="163" height="35" alt="Логотип Device"></a>
 			<nav class="main-navigation">
 				<form class="search-form" method="GET">
 					<label class="search-icon" for="inpt-main-search"><span class="visually-hidden">Поиск</span></label>
@@ -127,7 +128,7 @@
 					<ul class="catalog-list">
 						<li class="catalog-item">
 							<h3 class="catalog-item-heading"><a href="#">Любительская селфи-палка</a></h3>
-							<img src="img/catalog-list-item-amateur.jpg" alt="Картинка любительской селфи-палки">
+							<img src="img/catalog-list-item-amateur.jpg" width="360" height="380" alt="Картинка любительской селфи-палки">
 							<span class="catalog-price">500 руб.</span>
 							<div class="catalog-item-options">
 								<button class="button" type="button">В корзину</button>
@@ -136,7 +137,7 @@
 						</li>
 						<li class="catalog-item">
 							<h3 class="catalog-item-heading"><a href="#">Профессиональная селфи-палка</a></h3>
-							<img src="img/catalog-list-item-pro.jpg" alt="Картинка профессиональной селфи-палки">
+							<img src="img/catalog-list-item-pro.jpg" width="360" height="380" alt="Картинка профессиональной селфи-палки">
 							<span class="catalog-price">1 500 руб.</span>
 							<div class="catalog-item-options">
 								<button class="button" type="button">В корзину</button>
@@ -145,7 +146,7 @@
 						</li>
 						<li class="catalog-item">
 							<h3 class="catalog-item-heading"><a href="#">Непотопляемая селфи-палка</a></h3>
-							<img src="img/catalog-list-item-unsink.jpg" alt="Картинка непотопляемой селфи-палки">
+							<img src="img/catalog-list-item-unsink.jpg" width="360" height="380" alt="Картинка непотопляемой селфи-палки">
 							<span class="catalog-price">2 500 руб.</span>
 							<div class="catalog-item-options">
 								<button class="button" type="button">В корзину</button>
@@ -154,7 +155,7 @@
 						</li>
 						<li class="catalog-item">
 							<h3 class="catalog-item-heading"><a href="#">Селфи-палка «Следуй за мной»</a></h3>
-							<img src="img/catalog-list-item-follow.jpg" alt="Картинка селфи-палки Следуй за мной">
+							<img src="img/catalog-list-item-follow.jpg" width="360" height="380" alt="Картинка селфи-палки Следуй за мной">
 							<span class="catalog-price">4 900 руб.</span>
 							<div class="catalog-item-options">
 								<button class="button" type="button">В корзину</button>
@@ -163,8 +164,8 @@
 						</li>
 					</ul>
 					<ul class="pagination-list">
-						<li class="pagination-list-item"><a href="#">Назад</a></li>
-						<li class="pagination-list-item"><a href="#">1</a></li>
+						<li class="pagination-list-item"><a class="current-in-pagination">Назад</a></li>
+						<li class="pagination-list-item"><a class="current-in-pagination">1</a></li>
 						<li class="pagination-list-item"><a href="#">2</a></li>
 						<li class="pagination-list-item"><a href="#">3</a></li>
 						<li class="pagination-list-item"><a href="#">Вперед</a></li>
@@ -176,7 +177,7 @@
 	<footer class="main-footer">
 		<div class="w-container">
 			<ul class="user-navigation-footer footer-nav-when-logged">
-				<li class="user-navigation-footer-item"><a class="footer-logo" href="#"><img src="img/main-logo-footer.svg" alt="Логотип Device"></a></li>
+				<li class="user-navigation-footer-item"><a class="footer-logo" href="#"><img src="img/main-logo-footer.svg" width="163" height="35" alt="Логотип Device"></a></li>
 				<li class="user-navigation-footer-item"><a class="profile-link profile-link-footer" href="#">Иван Одинцов</a></li>
 				<li class="user-navigation-footer-item"><a class="logout-link logout-link-footer" href="#">Выйти</a></li>
 				<li class="user-navigation-footer-item"><a href="#">Сравнить</a></li>
