Немного стилей для хедера

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 					<label class="search-icon" for="inpt-main-search"><span class="visually-hidden">Поиск</span></label>
 					<input class="main-search" type="search" name="inpt-main-search" id="inpt-main-search" placeholder="Поиск по сайту">
 					<button class="btn-search" type="submit">Найти</button>
+					<span class="line-search"></span>
 				</form>
 				<ul class="user-navigation">
 					<li class="user-navigation-item"><a class="login-link" href="#">Войти</a></li>
