--- a/monopode.html
+++ b/monopode.html
@@ -26,7 +26,7 @@
 				</ul>
 				<ul class="site-navigation">
 					<li class="site-navigation-item">
-						<a href="#">Каталог товаров</a>
+						<a class="show-2nd-nesting" href="#">Каталог товаров</a>
 						<ul class="site-navigation-2nd-nesting">
 							<li class="site-navigation-2nd-nesting-item"><a href="#">Виртуальная реальность</a></li>
 							<li class="site-navigation-2nd-nesting-item"><a href="#">Моноподы для селфи</a></li>
