Стилизовал всё на главной кроме хэдера

--- a/index.html
+++ b/index.html
@@ -54,16 +54,22 @@
 					<span class="promo-slider-number">01</span>
 					<img class="promo-slider-img" src="img/promo-slider-monopode.png" width="384" height="486" alt="Крутой монопод">
 					<section class="promo-slider-item-right-side">
-						<h3 class="promo-slider-item-heading">Делай селфи, как Бен Стиллер!</h3>
+						<h3 class="promo-slider-item-heading">Делай селфи,<br>как Бен Стиллер!</h3>
 						<p class="promo-slider-item-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
 						<a class="promo-slider-about-link button" href="#">Подробнее</a>
 						<dl class="promo-slider-item-features">
-							<dt class="promo-slider-feature">8,5 м</dt>
+							<div class="dt-dd-wrapper">
+								<dt class="promo-slider-feature">8,5 м</dt>
 								<dd class="feature-description">Длина палки</dd>
-							<dt class="promo-slider-feature">5 кг</dt>
+							</div>
+							<div class="dt-dd-wrapper">
+								<dt class="promo-slider-feature">5 кг</dt>
 								<dd class="feature-description">Вес палки</dd>
-							<dt class="promo-slider-feature">Карбон</dt>
+							</div>
+							<div class="dt-dd-wrapper">
+								<dt class="promo-slider-feature">Карбон</dt>
 								<dd class="feature-description">Материал</dd>
+							</div>
 						</dl>
 					</section>
 				</div>
@@ -75,8 +81,10 @@
 						<p class="promo-slider-item-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
 						<a class="promo-slider-about-link button" href="#">Подробнее</a>
 						<dl class="promo-slider-item-features">
-							<dt class="promo-slider-feature">48 часов</dt>
+							<div class="dt-dd-wrapper">
+								<dt class="promo-slider-feature">48 часов</dt>
 								<dd class="feature-description">Без подзарядки</dd>
+							</div>
 						</dl>
 					</section>
 				</div>
@@ -88,10 +96,14 @@
 						<p class="promo-slider-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
 						<a class="promo-slider-about-link button" href="#">Подробнее</a>
 						<dl class="promo-slider-item-features">
-							<dt class="promo-slider-feature">800 м</dt>
+							<div class="dt-dd-wrapper">
+								<dt class="promo-slider-feature">800 м</dt>
 								<dd class="feature-description">Дальность полета</dd>
-							<dt class="promo-slider-feature">50 м</dt>
+							</div>
+							<div class="dt-dd-wrapper">
+								<dt class="promo-slider-feature">50 м</dt>
 								<dd class="feature-description">Радиус поражения</dd>
+							</div>
 						</dl>
 					</section>
 				</div>
@@ -112,7 +124,7 @@
 			<div class="w-container">
 				<h2 class="visually-hidden">Сервисы</h2>
 				<ul class="services-list">
-					<li class="services-list-item"><a class="current-in-services button btn-services" href="#">Доставка</a></li>
+					<li class="services-list-item current-in-services-list"><a class="button btn-services" href="#">Доставка</a></li>
 					<li class="services-list-item"><a class="button btn-services" href="#">Гарантия</a></li>
 					<li class="services-list-item"><a class="button btn-services" href="#">Кредит</a></li>
 				</ul>
@@ -173,9 +185,9 @@
 		<div class="w-container">
 			<ul class="user-navigation-footer">
 				<li class="user-navigation-footer-item"><a class="footer-logo"><img src="img/main-logo-footer.svg" width="163" height="35" alt="Логотип Device"></a></li>
-				<li class="user-navigation-footer-item"><a href="#">Войти</a></li>
-				<li class="user-navigation-footer-item"><a href="#">Сравнить</a></li>
-				<li class="user-navigation-footer-item"><a href="#">Корзина</a></li>
+				<li class="user-navigation-footer-item"><a class="login-link-footer" href="#">Войти</a></li>
+				<li class="user-navigation-footer-item"><a class="compare-link-footer" href="#">Сравнить</a></li>
+				<li class="user-navigation-footer-item"><a class="cart-link-footer" href="#">Корзина</a></li>
 			</ul>
 			<address class="footer-address">г. Москва, ул. Строителей, 15</address>
 			<ul class="footer-services-list">
