--- a/monopode.html
+++ b/monopode.html
@@ -176,27 +176,30 @@
 	</main>
 	<footer class="main-footer">
 		<div class="w-container">
-			<ul class="user-navigation-footer footer-nav-when-logged">
-				<li class="user-navigation-footer-item"><a class="footer-logo" href="#"><img src="img/main-logo-footer.svg" width="163" height="35" alt="Логотип Device"></a></li>
-				<li class="user-navigation-footer-item"><a class="profile-link profile-link-footer" href="#">Иван Одинцов</a></li>
-				<li class="user-navigation-footer-item"><a class="logout-link logout-link-footer" href="#">Выйти</a></li>
-				<li class="user-navigation-footer-item"><a href="#">Сравнить</a></li>
-				<li class="user-navigation-footer-item"><a href="#">Корзина</a></li>
+			<ul class="user-navigation-footer">
+				<li class="user-navigation-footer-item"><a class="footer-logo"><img src="img/main-logo-footer.svg" width="163" height="35" alt="Логотип Device"></a></li>
+				<li class="user-navigation-footer-item"><a class="login-link-footer" href="#">Войти</a></li>
+				<li class="user-navigation-footer-item"><a class="compare-link-footer" href="#">Сравнить</a></li>
+				<li class="user-navigation-footer-item"><a class="cart-link-footer" href="#">Корзина</a></li>
 			</ul>
-			<address class="footer-address">г. Москва, ул. Строителей, 15</address>
-			<ul class="footer-services-list">
-				<li class="footer-services-list-item"><a href="#">Доставка</a></li>
-				<li class="footer-services-list-item"><a href="#">Гарантия</a></li>
-				<li class="footer-services-list-item"><a href="#">Контакты</a></li>
-			</ul>
-			<span class="tel-number-footer">Тел.: +7 (495) 495-95-95</span>
-			<span class="line-footer"></span>
-			<ul class="social-list">
-				<li class="social-list-item social-fb"><a href="#"><span class="visually-hidden">Facebook</span></a></li>
-				<li class="social-list-item social-in"><a href="#"><span class="visually-hidden">Instagram</span></a></li>
-				<li class="social-list-item social-tw"><a href="#"><span class="visually-hidden">Twitter</span></a></li>
-			</ul>
-			<a class="htmlacademy-link" href="#"><span class="visually-hidden">HTMLAcademy</span></a>
+			<div class="footer-middle-area">
+				<address class="footer-address">г. Москва, ул. Строителей, 15</address>
+				<ul class="footer-services-list">
+					<li class="footer-services-list-item"><a href="#">Доставка</a></li>
+					<li class="footer-services-list-item"><a href="#">Гарантия</a></li>
+					<li class="footer-services-list-item"><a href="#">Контакты</a></li>
+				</ul>
+				<span class="tel-number-footer">Тел.: +7 (495) 495-95-95</span>
+			</div>
+			<div class="footer-bottom-area">
+				<span class="line-footer"></span>
+				<ul class="social-list">
+					<li class="social-list-item social-fb"><a href="#"><span class="visually-hidden">Facebook</span></a></li>
+					<li class="social-list-item social-in"><a href="#"><span class="visually-hidden">Instagram</span></a></li>
+					<li class="social-list-item social-tw"><a href="#"><span class="visually-hidden">Twitter</span></a></li>
+				</ul>
+				<a class="htmlacademy-link" href="#"><span class="visually-hidden">HTMLAcademy</span></a>
+			</div>
 		</div>
 	</footer>
 </body>
