--- a/index.html
+++ b/index.html
@@ -189,20 +189,24 @@
 				<li class="user-navigation-footer-item"><a class="compare-link-footer" href="#">Сравнить</a></li>
 				<li class="user-navigation-footer-item"><a class="cart-link-footer" href="#">Корзина</a></li>
 			</ul>
-			<address class="footer-address">г. Москва, ул. Строителей, 15</address>
-			<ul class="footer-services-list">
-				<li class="footer-services-list-item"><a href="#">Доставка</a></li>
-				<li class="footer-services-list-item"><a href="#">Гарантия</a></li>
-				<li class="footer-services-list-item"><a href="#">Контакты</a></li>
-			</ul>
-			<span class="tel-number-footer">Тел.: +7 (495) 495-95-95</span>
-			<span class="line-footer"></span>
-			<ul class="social-list">
-				<li class="social-list-item social-fb"><a href="#"><span class="visually-hidden">Facebook</span></a></li>
-				<li class="social-list-item social-in"><a href="#"><span class="visually-hidden">Instagram</span></a></li>
-				<li class="social-list-item social-tw"><a href="#"><span class="visually-hidden">Twitter</span></a></li>
-			</ul>
-			<a class="htmlacademy-link" href="#"><span class="visually-hidden">HTMLAcademy</span></a>
+			<div class="footer-middle-area">
+				<address class="footer-address">г. Москва, ул. Строителей, 15</address>
+				<ul class="footer-services-list">
+					<li class="footer-services-list-item"><a href="#">Доставка</a></li>
+					<li class="footer-services-list-item"><a href="#">Гарантия</a></li>
+					<li class="footer-services-list-item"><a href="#">Контакты</a></li>
+				</ul>
+				<span class="tel-number-footer">Тел.: +7 (495) 495-95-95</span>
+			</div>
+			<div class="footer-bottom-area">
+				<span class="line-footer"></span>
+				<ul class="social-list">
+					<li class="social-list-item social-fb"><a href="#"><span class="visually-hidden">Facebook</span></a></li>
+					<li class="social-list-item social-in"><a href="#"><span class="visually-hidden">Instagram</span></a></li>
+					<li class="social-list-item social-tw"><a href="#"><span class="visually-hidden">Twitter</span></a></li>
+				</ul>
+				<a class="htmlacademy-link" href="#"><span class="visually-hidden">HTMLAcademy</span></a>
+			</div>
 		</div>
 	</footer>
 
