Начал стилизацию каталога

--- a/monopode.html
+++ b/monopode.html
@@ -56,14 +56,14 @@
 		</div>
 		<div class="filters-and-sorting-heading-wrapper">
 			<div class="w-container">
-				<h2 class="filters-heading">Фильтры:</h2>
+				<h2 class="filters-heading">Фильтр:</h2>
 				<h2 class="sorting-heading">Сортировка:</h2>
 				<ul class="sorting-list">
 					<li class="sorting-list-item"><a class="current-in-sorting">По цене</a></li>
 					<li class="sorting-list-item"><a href="#">По типу</a></li>
 					<li class="sorting-list-item"><a href="#">По популярности</a></li>
-					<li class="sorting-list-item"><a class="sorting-list-arrow-top" href="#"><span class="visually-hidden">По возрастанию</span></a></li>
-					<li class="sorting-list-item"><a class="sorting-list-arrow-bottom current-in-sorting-arrow"><span class="visually-hidden">По убыванию</span></a></li>
+					<li class="sorting-list-item"><a class="sorting-list-arrow arrow-top" href="#"><span class="visually-hidden">По возрастанию</span></a></li>
+					<li class="sorting-list-item"><a class="sorting-list-arrow arrow-bottom current-in-sorting-arrow"><span class="visually-hidden">По убыванию</span></a></li>
 				</ul>
 			</div>
 		</div>
