Custom range field

--- a/monopode.html
+++ b/monopode.html
@@ -73,14 +73,11 @@
 					<fieldset class="filters-fieldset">
 						<legend>Стоимость</legend>
 						<div class="range-field">
-							<button class="range-btn" type="button"></button>
+							<button class="range-btn" type="button"><span class="visually-hidden">Меньшее значение</span></button>
 							<div class="range-line"></div>
-							<div class="range-green-line"></div>
-							<button class="range-btn" type="button"></button>
-							<label for="min-price">от</label>
-							<input class="input-range" type="text" name="min-price" id="min-price" placeholder="0">
-							<label for="max-price">до</label>
-							<input class="input-range" type="text" name="max-price" id="max-price" placeholder="5000">
+							<button class="range-btn" type="button"><span class="visually-hidden">Большее значение</span></button>
+							<label>от 0</label>
+							<label>до 5000</label>
 						</div>
 					</fieldset>
 					<fieldset class="filters-fieldset">
