--- a/monopode.html
+++ b/monopode.html
@@ -123,40 +123,48 @@
 				<div class="catalog-and-pagination-wrapper">
 					<h2 class="visually-hidden">Каталог моноподов</h2>
 					<ul class="catalog-list">
-						<li class="catalog-item">
+						<li class="catalog-item" tabindex="0">
 							<h3 class="catalog-item-heading"><a href="#">Любительская селфи-палка</a></h3>
-							<img src="img/catalog-list-item-amateur.jpg" width="360" height="380" alt="Картинка любительской селфи-палки">
 							<span class="catalog-price">500 руб.</span>
-							<div class="catalog-item-options">
-								<button class="button" type="button">В корзину</button>
-								<button class="goto-match" type="button">Добавить к сравнению</button>
+							<div class="img-options-wrapper">
+								<img src="img/catalog-list-item-amateur.jpg" width="360" height="380" alt="Картинка любительской селфи-палки">
+								<div class="catalog-item-options">
+									<button class="button" type="button">В корзину</button>
+									<button class="goto-match" type="button">Добавить к сравнению</button>
+								</div>
 							</div>
 						</li>
-						<li class="catalog-item">
+						<li class="catalog-item" tabindex="0">
 							<h3 class="catalog-item-heading"><a href="#">Профессиональная селфи-палка</a></h3>
-							<img src="img/catalog-list-item-pro.jpg" width="360" height="380" alt="Картинка профессиональной селфи-палки">
 							<span class="catalog-price">1 500 руб.</span>
-							<div class="catalog-item-options">
-								<button class="button" type="button">В корзину</button>
-								<button class="goto-match" type="button">Добавить к сравнению</button>
+							<div class="img-options-wrapper">
+								<img src="img/catalog-list-item-pro.jpg" width="360" height="380" alt="Картинка профессиональной селфи-палки">
+								<div class="catalog-item-options">
+									<button class="button" type="button">В корзину</button>
+									<button class="goto-match" type="button">Добавить к сравнению</button>
+								</div>
 							</div>
 						</li>
-						<li class="catalog-item">
+						<li class="catalog-item" tabindex="0">
 							<h3 class="catalog-item-heading"><a href="#">Непотопляемая селфи-палка</a></h3>
-							<img src="img/catalog-list-item-unsink.jpg" width="360" height="380" alt="Картинка непотопляемой селфи-палки">
 							<span class="catalog-price">2 500 руб.</span>
-							<div class="catalog-item-options">
-								<button class="button" type="button">В корзину</button>
-								<button class="goto-match" type="button">Добавить к сравнению</button>
+							<div class="img-options-wrapper">
+								<img src="img/catalog-list-item-unsink.jpg" width="360" height="380" alt="Картинка непотопляемой селфи-палки">
+								<div class="catalog-item-options">
+									<button class="button" type="button">В корзину</button>
+									<button class="goto-match" type="button">Добавить к сравнению</button>
+								</div>
 							</div>
 						</li>
-						<li class="catalog-item">
+						<li class="catalog-item" tabindex="0">
 							<h3 class="catalog-item-heading"><a href="#">Селфи-палка «Следуй за мной»</a></h3>
-							<img src="img/catalog-list-item-follow.jpg" width="360" height="380" alt="Картинка селфи-палки Следуй за мной">
 							<span class="catalog-price">4 900 руб.</span>
-							<div class="catalog-item-options">
-								<button class="button" type="button">В корзину</button>
-								<button class="goto-match" type="button">Добавить к сравнению</button>
+							<div class="img-options-wrapper">
+								<img src="img/catalog-list-item-follow.jpg" width="360" height="380" alt="Картинка селфи-палки Следуй за мной">
+								<div class="catalog-item-options">
+									<button class="button" type="button">В корзину</button>
+									<button class="goto-match" type="button">Добавить к сравнению</button>
+								</div>
 							</div>
 						</li>
 					</ul>
