--- a/monopode.html
+++ b/monopode.html
@@ -15,8 +15,9 @@
 			<nav class="main-navigation">
 				<form class="search-form" method="GET">
 					<label class="search-icon" for="inpt-main-search"><span class="visually-hidden">Поиск</span></label>
-					<input class="main-search" name="inpt-main-search" type="search" placeholder="Поиск по сайту">
+					<input class="main-search" type="search" name="inpt-main-search" id="inpt-main-search" placeholder="Поиск по сайту">
 					<button class="btn-search" type="submit">Найти</button>
+					<span class="line-search"></span>
 				</form>
 				<ul class="user-navigation user-nav-when-logged">
 					<li class="user-navigation-item"><a class="profile-link" href="#">Иван Одинцов</a></li>
@@ -156,7 +157,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="catalog-item" tabindex="0">
+						<li class="catalog-item new-flag" tabindex="0">
 							<h3 class="catalog-item-heading"><a href="#">Селфи-палка «Следуй за мной»</a></h3>
 							<span class="catalog-price">4 900 руб.</span>
 							<div class="img-options-wrapper">
