скрипты для промо и сервисов

--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
 				<h2 class="visually-hidden">Лучшие товары</h2>
 				<div class="promo-slider-slides promo-slide-1 show-promo-slide">
 					<span class="promo-slider-number">01</span>
-					<img class="promo-slider-img" src="img/promo-slider-monopode.png" width="384" height="486" alt="Крутой монопод">
-					<section class="promo-slider-item-right-side">
+					<div class="promo-slider-img-wrapper">
+						<img class="promo-slider-img" src="img/promo-slider-monopode.png" width="384" height="486" alt="Крутой монопод">
+					</div>
+					<section class="promo-slider-text-wrapper">
 						<h3 class="promo-slider-item-heading">Делай селфи,<br>как Бен Стиллер!</h3>
 						<p class="promo-slider-item-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
 						<a class="promo-slider-about-link button" href="#">Подробнее</a>
@@ -75,8 +77,10 @@
 				</div>
 				<div class="promo-slider-slides promo-slide-2">
 					<span class="promo-slider-number">02</span>
-					<img class="promo-slider-img" src="img/promo-slider-bracelet.png" width="345" height="485" alt="Крутой фитнес-браслет">
-					<section class="promo-slider-item-right-side">
+					<div class="promo-slider-img-wrapper">
+						<img class="promo-slider-img" src="img/promo-slider-bracelet.png" width="345" height="485" alt="Крутой фитнес-браслет">
+					</div>
+					<section class="promo-slider-text-wrapper">
 						<h3 class="promo-slider-item-heading">Худеем правильно!</h3>
 						<p class="promo-slider-item-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
 						<a class="promo-slider-about-link button" href="#">Подробнее</a>
@@ -90,8 +94,10 @@
 				</div>
 				<div class="promo-slider-slides promo-slide-3">
 					<span class="promo-slider-number">03</span>
-					<img class="promo-slider-img" src="img/promo-slider-quadrocopter.png" width="526" height="334" alt="Крутой квадрокоптер">
-					<section class="promo-slider-item-right-side">
+					<div class="promo-slider-img-wrapper">
+						<img class="promo-slider-img" src="img/promo-slider-quadrocopter.png" width="526" height="334" alt="Крутой квадрокоптер">
+					</div>
+					<section class="promo-slider-text-wrapper">
 						<h3 class="promo-slider-item-heading">Порхает как бабочка, жалит как пчела!</h3>
 						<p class="promo-slider-item-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
 						<a class="promo-slider-about-link button" href="#">Подробнее</a>
@@ -235,5 +241,8 @@
 		<img src="img/map-big.png" width="960" height="550" alt="Адрес магазина Device по адресу г. Москва, ул. Строителей, д. 15">
 		<button class="close-btn" type="button"><span class="visually-hidden">Закрыть карту</span></button>
 	</div>
+
+	<script src="js/promo-slider-script.js"></script>
+	<script src="js/services-slider-script.js"></script>
 </body>
 </html>
