--- a/monopode.html
+++ b/monopode.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div class="w-container">
-		<header class="main-header">
+		<header class="main-header header-inner">
 			<a class="header-logo" href="index.html"><img src="img/main-logo-header.svg" width="163" height="35" alt="Логотип Device"></a>
 			<nav class="main-navigation">
 				<form class="search-form" method="GET">
