доделал скрипты и карту

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 					<h2>Контакты</h2>
 					<p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
 					<a class="map-btn" href="#"><img src="img/map.png" width="560" height="222" alt="Адрес магазина Device по адресу г. Москва, ул. Строителей, д. 15"></a>
-					<a class="button" href="#">Напишите нам</a>
+					<a class="button btn-about" href="#">Напишите нам</a>
 				</section>
 			</div>
 		</div>
@@ -238,11 +238,15 @@
 		<button class="close-btn" type="button"><span class="visually-hidden">Закрыть форму</span></button>
 	</section>
 	<div class="popup-map">
-		<img src="img/map-big.png" width="960" height="550" alt="Адрес магазина Device по адресу г. Москва, ул. Строителей, д. 15">
+		<p>
+			<img src="img/map-big.png" width="960" height="550" alt="Адрес магазина Device по адресу г. Москва, ул. Строителей, д. 15">
+		</p>
+		<iframe src="https://yandex.ru/map-widget/v1/-/CGsTFXOG" width="960" height="550"></iframe>
 		<button class="close-btn" type="button"><span class="visually-hidden">Закрыть карту</span></button>
 	</div>
 
 	<script src="js/promo-slider-script.js"></script>
 	<script src="js/services-slider-script.js"></script>
+	<script src="js/popup-script.js"></script>
 </body>
 </html>
