--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap&subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="css/normalize.mini.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.mini.css">
 </head>
 <body>
 	<div class="w-container">
@@ -245,8 +245,8 @@
 		<button class="close-btn" type="button"><span class="visually-hidden">Закрыть карту</span></button>
 	</div>
 
-	<script src="js/promo-slider-script.js"></script>
-	<script src="js/services-slider-script.js"></script>
-	<script src="js/popup-script.js"></script>
+	<script src="js/promo-slider-script.mini.js"></script>
+	<script src="js/services-slider-script.mini.js"></script>
+	<script src="js/popup-script.mini.js"></script>
 </body>
 </html>
